small responsive bug on mobile for listing and details card

--- a/RijksApp/src/app/components/art-details/art-details.component.less
+++ b/RijksApp/src/app/components/art-details/art-details.component.less
@@ -10,6 +10,10 @@
             padding: 30px;
             border-radius: 7px;
         }
+
+        @media screen and (max-width: 450px) {
+            grid-template-columns: 100%;
+        }
     }
     
 }
