--- a/RijksApp/src/app/components/arts-list/arts-list.component.less
+++ b/RijksApp/src/app/components/arts-list/arts-list.component.less
@@ -1,5 +1,11 @@
 .masonry-item{
     width: 32%;
+    @media screen and (max-width: 900px) {
+        width: 47%;
+    }
+    @media screen and (max-width: 450px) {
+        width: 100%;
+    }
 }
 header{
     padding-top: 15px;
